--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+backend/lib/
 lib64/
 parts/
 sdist/
@@ -61,6 +61,9 @@ htmlcov/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Frontend specific
+frontend/node_modules/
 
 # Backend specific
 backend/venv/
