--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "out",
+  "outputDirectory": ".next",
   "env": {
     "NEXT_PUBLIC_CHAT_DOMAIN_KEY": "@next_public_chat_domain_key"
   }
