--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,9 @@
     "axios": "^1.13.2",
     "better-auth": "^1.4.10",
     "jwt-decode": "^4.0.0",
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "13.5.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
@@ -30,14 +30,18 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "13.5.8",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "msw": "^2.12.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
